feat: Add genre update route
