# dist/swagger.json
@@ -125,6 +125,50 @@
                     }
                 }
             }
+        },
+        "/genres/{id}": {
+            "put": {
+                "tags": ["Genres"],
+                "summary": "Atualizar um gênero existente",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "ID do gênero à ser atualizado",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Genre"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Gênero atualizado com sucesso"
+                    },
+                    "400": {
+                        "description": "O nome do gênero é obrigatório"
+                    },
+                    "404": {
+                        "description": "Gênero não encontrado"
+                    },
+                    "409": {
+                        "description": "Já existe um gênero com esse nome."
+                    },
+                    "500": {
+                        "description": "Erro interno do servidor"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -215,6 +259,16 @@
                         "type": "string",
                         "format": "date",
                         "description": "Data de lançamento do filme"
+                    }
+                }
+            },
+            "Genre": {
+                "type": "object",
+                "required": ["name"],
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "description": "Nome do gênero"
                     }
                 }
             }
